3nd page fix on mobile

--- a/src/sass/global/garden.scss
+++ b/src/sass/global/garden.scss
@@ -32,7 +32,7 @@
 		.fa{
 			left: 0;
 			right: inherit;
-			top: 3px;
+			top: 2px;
 			font-size: 43px;
 		}
 
